testdata/baselines/reference/submodule/conformance/scannerNumericLiteral8.errors.txt
scannerNumericLiteral8.ts(1,2): error TS1121: Octal literals are not allowed. Use the syntax '3'.


==== scannerNumericLiteral8.ts (1 errors) ====
    -03
     ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '3'.